# pocketlens

./: .gitignore  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/acamera/android/: MainActivity.kt
android/app/src/main/java/com/pocketlens/android/: MainActivity.kt
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/test/resources/fixtures/: pair.success.json  receiver_status.missing_dependencies.json  session_start.request.json  session_stop.request.json  session_stop.success.json
contracts/: README.md
contracts/fixtures/: events.error.json  events.stats.json  events.warning.json  receiver_status.ready.json  session_start.success.json
docs/: linux-setup.md
integration/: COMMANDS.md  README.md  verify_contract_fixtures.py
linux/: Cargo.toml
linux/gtk/: Cargo.toml
linux/gtk/src/: main.rs  style.css
linux/receiver/: Cargo.toml
linux/receiver/src/: lib.rs  main.rs
linux/receiver/tests/: protocol_contract.rs
linux/receiver/tests/fixtures/: pair.invalid_pin.json  pair.request.json  pair.success.json  receiver_status.missing_dependencies.json  receiver_status.ready.json
linux/server/: Cargo.toml
linux/server/src/: camera.rs  check_deps.rs  cleanup.rs  config.rs  control.rs  crypto.rs  diagnostics.rs  discovery.rs  install.rs  lib.rs  mdns.rs  media.rs  pairing.rs  protocol.rs  rtp.rs  session.rs  virtual_mic.rs
(+64 files in other folders)
