[package]
name = "pocketlens-gtk"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "pocketlens-gtk"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
libadwaita = { version = "0.7", features = ["v1_4"] }
serde_json = "1.0.150"
