[package]
name = "pocketlens-receiver"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "pocketlens-receiver"
path = "src/main.rs"

[dependencies]
pocketlens-server = { path = "../server" }
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
mdns-sd = "0.20"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shellexpand = "3"
sysinfo = "0.35"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
which = "7"

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["util"] }
